Mudanças Front End

--- a/Documentação Projeto Ecoffe/docs/frontend/src/app/components/template/body/body.component.html
+++ b/Documentação Projeto Ecoffe/docs/frontend/src/app/components/template/body/body.component.html
@@ -1,25 +1,14 @@
 
-<div class="wrapper fadeInDown">
-    <div id="formContent">
-      <!-- Tabs Titles -->
-  
-      <!-- Icon -->
-      <div class="fadeIn first">
-        <img class="loginImagem" src="assets/login.png" alt="login">
+<div class="container">
+  <div class="row">
+      <div class="col-md-6">
+          <div class="card">
+              <form onsubmit="event.preventDefault()" class="box">
+                  <h1>Login</h1>
+                  <p class="text-muted"> Please enter your login and password!</p> <input type="text" name="" placeholder="Username"> <input type="password" name="" placeholder="Password"> <a class="forgot text-muted" href="#">Forgot password?</a> <input type="submit" name="" value="Login" href="#">
+                  
+              </form>
+          </div>
       </div>
-  
-      <!-- Login Form -->
-      <form>
-        <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-        <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
-        <input type="submit" class="fadeIn fourth" value="Log In">
-        <input type="button" class="botaoteste" value="Teste" (click)="carregarProdutos()">
-      </form>
-  
-      <!-- Remind Passowrd -->
-      <div id="formFooter">
-        <a class="underlineHover" href="#">Forgot Password?</a>
-      </div>
-  
-    </div>
   </div>
+</div>
