--- a/Documentação Projeto Ecoffe/docs/frontend/src/app/components/template/footer/footer.component.html
+++ b/Documentação Projeto Ecoffe/docs/frontend/src/app/components/template/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="footer mat-elevation-z6">
-    <span>
+    <span class="Desenvolvido">
         Desenvolvido com
         <i class="material-icons red v-middle">
             favorite
