--- a/Documentação Projeto Ecoffe/docs/frontend/src/app/components/template/header/header.component.html
+++ b/Documentação Projeto Ecoffe/docs/frontend/src/app/components/template/header/header.component.html
@@ -1,15 +1,34 @@
 <mat-toolbar class="header mat-elevation-z6">
-    <span>
-        <a>
-            <img class="logo" src="assets/logo.png" alt="logo">
-        </a>
-    </span >
-    <span class="Titulo">
-        <a>
-            <i class="material-icons">
-                home
-            </i>
+    
+    <span class="Titulo black">
             E-Coffe
-        </a>
     </span>
+
+
+    <a mat-list-item class= "nav-list black">
+        <i class= "material-icons v-middle">
+            home
+        </i>
+        Início
+    </a>
+    <a mat-list-item class= "nav-list black ">
+        <i class= "material-icons v-middle">
+            storefront
+        </i>
+        Produtos
+    </a>
+    <a mat-list-item class= "nav-list black ">
+        <i class= "material-icons v-middle">
+            shopping_cart
+        </i>
+        Carrinho
+    </a>
+    <a mat-list-item class= "nav-list black ">
+        <i class= "material-icons v-middle">
+            login
+        </i>
+        Login
+    </a>
+
+    
 </mat-toolbar>
