--- a/Documentação Projeto Ecoffe/docs/frontend/src/app/components/template/nav/nav.component.html
+++ b/Documentação Projeto Ecoffe/docs/frontend/src/app/components/template/nav/nav.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class= "container">
-    <mat-sidenav class= "sidenav" mode="side" opened fixedInViewport= "true" fixedTopGap= "64" >
+    <mat-sidenav class= "sidenav" mode="side" opened fixedInViewport= "true" fixedTopGap= "64" fixedBottomGap= "64" >
         <mat-nav-list>
             <a mat-list-item class= "nav-list">
                 <i class= "material-icons">
