--- a/Documentação Projeto Ecoffe/docs/frontend/src/styles.css
+++ b/Documentação Projeto Ecoffe/docs/frontend/src/styles.css
@@ -11,3 +11,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .v-middle{
     vertical-align: middle;
 }
+
+.black{
+    color:black
+}
