--- a/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
@@ -1,33 +1,18 @@
-<mat-toolbar class="header mat-elevation-z6">
+<mat-toolbar class="header mat-elevation-z1">
     
-    <span class="Titulo black">
+    <span class="titulo black">
             E-Coffe
     </span>
 
 
     <a mat-list-item class= "nav-list black">
-        <i class= "material-icons v-middle">
-            home
-        </i>
         Início
     </a>
     <a mat-list-item class= "nav-list black ">
-        <i class= "material-icons v-middle">
-            storefront
-        </i>
         Produtos
     </a>
     <a mat-list-item class= "nav-list black ">
-        <i class= "material-icons v-middle">
-            shopping_cart
-        </i>
-        Carrinho
-    </a>
-    <a mat-list-item class= "nav-list black ">
-        <i class= "material-icons v-middle">
-            login
-        </i>
-        Login
+        Sobre
     </a>
 
     
