--- a/src/Ecoffe.Frontend/src/styles.css
+++ b/src/Ecoffe.Frontend/src/styles.css
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #f7f6f7;
+}
 
 .red{
     color: rgb(227,94,107
@@ -13,5 +17,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .black{
-    color:black
+    color: black;
+}
+
+.header{
+    color: red;
 }
