--- a/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
@@ -1,19 +1,13 @@
 <mat-toolbar class="header mat-elevation-z1">
     
-    <span class="titulo black">
-            E-Coffe
-    </span>
+    <div class="titulo">
+        <span class="black">E-Coffe</span>
+    </div>
 
-
-    <a mat-list-item class= "nav-list black">
-        Início
-    </a>
-    <a mat-list-item class= "nav-list black ">
-        Produtos
-    </a>
-    <a mat-list-item class= "nav-list black ">
-        Sobre
-    </a>
-
+    <div class="nav-header">
+        <a class="black">Início</a>
+        <a class= "black ">Produtos</a>
+        <a class= "black ">Sobre</a>
+    </div>
     
 </mat-toolbar>
