--- a/src/Ecoffe.Frontend/src/app/components/template/header/header.component.css
+++ b/src/Ecoffe.Frontend/src/app/components/template/header/header.component.css
@@ -1,31 +1,17 @@
 .header{
     display: flex;
-    align-items: center;
+    justify-content: center;
     background-color: #f7f6f7;
-    position: relative;
     height: 110px;
 }
 
 .header a {
-    display: flex;
-    align-items: center;
     text-decoration: none;
-    left: 39.2%;
-    top: 30px;
+    margin-top: 100px;
     margin-right: 35px;
 }
 
-
-.header .titulo {
-    padding-left: 20px;
-    margin-right: 15px;
-}
-
-
 .titulo{
     position: absolute;
-    width: 115px;
-    height: 28px;
-    left: 47%;
-    top: 15px;
+    margin-bottom: 60px;
 }
