componente login-register

--- a/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
@@ -5,9 +5,10 @@
     </div>
 
     <div class="nav-header">
-        <a class="black">Início</a>
-        <a class= "black ">Produtos</a>
-        <a class= "black ">Sobre</a>
+        <a routerLink="" class="black">Início</a>
+        <a routerLink="/products" class= "black ">Produtos</a>
+        <a routerLink="/about" class= "black ">Sobre</a>
+        <a routerLink="/login" class= "black ">Entrar</a>
     </div>
     
 </mat-toolbar>
