--- a/src/Ecoffe.Frontend/src/app/views/login-register/login-register.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/login-register/login-register.component.html
@@ -1,6 +1,36 @@
 <app-header></app-header>
 
+<mat-card>
+    <mat-card-title>Login</mat-card-title>
+    <form>
+        <mat-form-field>
+            <input matInput placeholder="CPF ou Email" [(ngModel)]="loginUser.emailCpf">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Senha" [(ngModel)]="loginUser.senha">
+        </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="login()" color="primary">
+        Entrar
+    </button>
+</mat-card>
 
+<br>
+
+<mat-card>
+    <mat-card-title>Registrar</mat-card-title>
+    <form>
+        <mat-form-field>
+            <input matInput placeholder="CPF ou Email" [(ngModel)]="loginUser.emailCpf">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Senha" [(ngModel)]="loginUser.senha">
+        </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="teste()" color="primary">
+        Registrar
+    </button>
+</mat-card>
 
 
 <app-footer></app-footer>
