inicio minha conta

--- a/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
@@ -9,6 +9,7 @@
         <a routerLink="/products" class= "black ">Produtos</a>
         <a routerLink="/about" class= "black ">Sobre</a>
         <a routerLink="/login" class= "black ">Entrar</a>
+        <a routerLink="/account" class= "black ">Minha Conta</a>
     </div>
     
 </mat-toolbar>
