--- a/src/Ecoffe.Frontend/src/app/components/template/header/header.component.css
+++ b/src/Ecoffe.Frontend/src/app/components/template/header/header.component.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Ovo&display=swap');
+
+
 .header{
     display: flex;
     justify-content: center;
-    background-color: #f7f6f7;
+    background-color: #FBF6FF;
     height: 110px;
+    font-family: 'Ovo', serif;
+
 }
+
 
 .header a {
     text-decoration: none;
@@ -11,7 +17,76 @@
     margin-right: 35px;
 }
 
-.titulo{
+.nav-header{
+    color: black;
+    position: absolute;
+    margin-top: 90px;
+}
+
+.logo{
     position: absolute;
     margin-bottom: 60px;
 }
+
+h4 {
+    color:black;
+    float: right;
+    align-items: center;
+    text-align: center;
+    margin-top: 25px;
+}
+
+form {
+    background-color: white;
+    width: 25 0px;
+    height: 44px;
+    margin-top: 20px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 1400px;
+
+  }
+
+  input {
+    all: unset;
+    font: 16px system-ui;
+    color: black;
+    height: 100%;
+    width: 100%;
+    padding: 6px 10px;
+  }
+
+  ::placeholder {
+    color: black;
+    opacity: 0.7; 
+  }
+
+  button {
+    all: unset;
+    cursor: pointer;
+    width: 44px;
+    height: 44px;
+  }
+  
+  svg {
+    color: black;
+    fill: currentColor;
+    width: 24px;
+    height: 24px;
+    padding: 10px;
+  }
+
+  .cart {
+    height: 32px;
+    width: 32px;
+    align-items: center;
+    display: flex;
+    margin-top: 25px;
+    margin-left: 20px;
+    
+  }
+
+
+
