--- a/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/template/header/header.component.html
@@ -1,15 +1,26 @@
+<link rel="stylesheet" href="./header.component.css">
+
+
 <mat-toolbar class="header mat-elevation-z1">
-    
-    <div class="titulo">
-        <span class="black">E-Coffe</span>
+    <div class="logo">
+       <img src="./Imagens/img.png">
+    <h4>CAFÉNINE</h4>
     </div>
 
     <div class="nav-header">
-        <a routerLink="" class="black">Início</a>
-        <a routerLink="/products" class= "black ">Produtos</a>
-        <a routerLink="/about" class= "black ">Sobre</a>
-        <a routerLink="/login" class= "black ">Entrar</a>
-        <a routerLink="/account" class= "black ">Minha Conta</a>
+        <a routerLink="" class="black">INICIO</a>
+        <a routerLink="/products" class= "black ">PRODUTOS</a>
+        <a routerLink="/about" class= "black ">SOBRE</a>
+        <a routerLink="/login" class= "black ">ENTRAR</a>
+        <a routerLink="/login" class= "black ">MINHA CONTA</a>
     </div>
-    
+    <form id="form" role="search">
+        <input type="search" id="query" name="q"
+         placeholder="Search..."
+         aria-label="Search through site content">
+        <button><svg viewBox="0 0 1024 1024"><path class="path1" d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z"></path></svg></button>
+      </form>
+      <img class="cart" src="./Imagens/12b07d7d7dbde76a3a687552d50d397f.png">
+
+       
 </mat-toolbar>
