Commit para Pull Request

--- a/src/Ecoffe.Frontend/src/app/views/home/home.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/home/home.component.html
@@ -23,19 +23,19 @@
 <mat-card>
     <section class="Container">
         <div>
-            <img src="../../../assets/cafe1.jpg" alt="img produto mas votado" class="imagem">
+            <img src="../../../assets/cafe1.jpg" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
         <div>
-            <img src="../../../assets/cafe1.jpg" alt="img produto mas votado" class="imagem">
+            <img src="../../../assets/cafe1.jpg" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
         <div>
-            <img src="../../../assets/cafe1.jpg" alt="img produto mas votado" class="imagem">
+            <img src="../../../assets/cafe1.jpg" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
         <div>
-            <img src="../../../assets/cafe1.jpg" alt="img produto mas votado" class="imagem">
+            <img src="../../../assets/cafe1.jpg" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
     </section>
