--- a/src/Ecoffe.Frontend/src/app/views/account/account.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/account/account.component.html
@@ -52,28 +52,6 @@
     </button>
 </mat-card>
 
-<mat-card *ngIf="areaType == 1">
-    <mat-card-title>Cartões</mat-card-title>
-    <form>
-        <mat-form-field>
-            <input matInput placeholder="Número do cartão" [(ngModel)]="usuario.nome" name="usuario_Nome">
-        </mat-form-field>
-        <br>
-        <mat-form-field>
-            <input matInput placeholder="Nome completo" [(ngModel)]="usuario.nome" name="usuario_Nome">
-        </mat-form-field>
-        <br>
-        <mat-form-field>
-            <input matInput placeholder="Data de Vencimento" [(ngModel)]="usuario.nome" name="usuario_Nome">
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Código de segurança" [(ngModel)]="usuario.nome" name="usuario_Nome">
-        </mat-form-field>
-        <br>
-        <mat-form-field>
-            <input matInput placeholder="CPF do titular" [(ngModel)]="usuario.nome" name="usuario_Nome">
-        </mat-form-field>
-    </form>
-</mat-card>
+<app-card-list *ngIf="areaType == 1"></app-card-list>
 
 <app-footer></app-footer>
