--- a/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.html
@@ -15,7 +15,10 @@
           <p>Validade: {{ card.vencimento | date:"MM/yy" }}</p>
           <button mat-raised-button (click)="turnPrincipal(card.id)" color="primary" *ngIf="!card.principal">
             Tornar principal
-        </button>
+          </button>
+          <button mat-raised-button (click)="delete(card.id)" color="primary">
+            <i class="material-icons">delete</i>
+          </button>
         </mat-expansion-panel>
       </mat-accordion>
       <p *ngIf="cards.length == 0">Não há nenhum cartão cadastrado.</p>
