css botões cartão

--- a/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.css
+++ b/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.css
@@ -18,3 +18,16 @@
 .principalCard > .mat-expansion-panel-header{
     font-weight: 550
 }
+
+.descriptionExpanded{
+    float: left;
+}
+
+.buttonsExpanded{
+    display: flex;
+    float: right;
+}
+
+.buttonsExpanded > button:first-of-type{
+    margin-right: 10px;
+}
