pipe para tipo do cartão

--- a/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.html
@@ -5,7 +5,7 @@
           <mat-expansion-panel-header>
             <mat-panel-title>
             {{ card.bandeira }}
-            {{ card.tipoCartao }}
+            {{ card.tipoCartao | cardType }}
             </mat-panel-title>
             <mat-panel-description>
                 {{ card.numero | hideCardNumber}}
