--- a/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.css
+++ b/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.css
@@ -31,3 +31,14 @@
 .buttonsExpanded > button:first-of-type{
     margin-right: 10px;
 }
+
+.cardBrand{
+    max-height: 40px;
+    max-width: 80px;
+    margin-right: 1.2rem;
+}
+
+.cardBrandLogoContainer{
+    width: 90px;
+    text-align: center;
+}
