--- a/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/card-list/card-list.component.html
@@ -30,6 +30,6 @@
       </mat-accordion>
       <p *ngIf="cards.length == 0">Não há nenhum cartão cadastrado.</p>
 </mat-card>
-<button mat-flat-button color="primary" (click)="openCardNewModal()">
+<button mat-flat-button color="primary" (click)="openCardNewModal()" class="newCardButton">
   Novo cartão
 </button>
